<resources>
    <string name="app_name">GAG Stock</string>
    <!-- the below strings are to make git and the ide stfu -->
    <string name="load">Loading…</string>
    <string name="seeds">Seeds</string>
    <string name="gears">Gears</string>
    <string name="eggs">Eggs</string>
    <string name="github">Github</string>
    <string name="notifs">Notifs</string>
    <string name="save">Save</string>
    <string name="grape">Grape</string>
    <string name="notification_settings">Notification Settings\n(scroll)</string>
    <string name="corn">Corn</string>
    <string name="daffodil">Daffodil</string>
    <string name="watermelon">Watermelon</string>
    <string name="apple">Apple</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="bamboo">Bamboo</string>
    <string name="coconut">Coconut</string>
    <string name="cactus">Cactus</string>
    <string name="dragon_fruit">Dragon Fruit</string>
    <string name="mango">Mango</string>
    <string name="mushroom">Mushroom</string>
    <string name="cacao">Cacao</string>
    <string name="pepper">Pepper</string>
    <string name="lemon">Lemon</string>
    <string name="pineapple">Pineapple</string>
    <string name="peach">Peach</string>
    <string name="pear">Pear</string>
    <string name="papaya">Papaya</string>
    <string name="banana">Banana</string>
    <string name="passion_fruit">Passion Fruit</string>
    <string name="soul_fruit">Soul Fruit</string>
    <string name="cursed_fruit">Cursed Fruit</string>
    <string name="wait">Wait!</string>
    <string name="join_dc_text">The service we use requires you to have a discord account and to be in their server.\nPlease <a href="https://discord.com/invite/kCryJ8zPwy">join their server</a> and enter your Discord User ID in the white box below.</string>
    <string name="ember_lily">Ember Lily</string>
    <string name="beanstalk">Beanstalk</string>
    <string name="sugar_apple">Sugar Apple</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="green_apple">Green Apple</string>
    <string name="avocado">Avacado</string>
    <string name="kiwi">Kiwi</string>
    <string name="bell_pepper">Bell Pepper</string>
    <string name="prickly_pear">Prickly Pear</string>
    <string name="loquat">Loquat</string>
    <string name="feijoa">Feijoa</string>
    <string name="validate">Click me to validate!</string>
    <string name="validating">Validating...</string>
    <string name="burning_bud">Burning Bud</string>
    <string name="reconnecting">Reconnecting...</string>
</resources>