<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SetNotifsActivity"
    android:id="@+id/notifs"
    android:background="@color/btn">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/studs" />

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/notification_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:fontFamily="@font/gagfont"
        android:textColor="@color/white"
        android:background="@color/gagbkrd"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/save"
        app:layout_constraintTop_toBottomOf="@id/settingsText"
        android:layout_margin="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/corn"
                style="@style/NotifCheckbox"
                android:text="@string/corn"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/daffodil"
                style="@style/NotifCheckbox"
                android:text="@string/daffodil"
                app:layout_constraintTop_toBottomOf="@id/corn"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/watermelon"
                style="@style/NotifCheckbox"
                android:text="@string/watermelon"
                app:layout_constraintTop_toBottomOf="@id/daffodil"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/pumpkin"
                style="@style/NotifCheckbox"
                android:text="@string/pumpkin"
                app:layout_constraintTop_toBottomOf="@id/watermelon"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/apple"
                style="@style/NotifCheckbox"
                android:text="@string/apple"
                app:layout_constraintTop_toBottomOf="@id/pumpkin"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/bamboo"
                style="@style/NotifCheckbox"
                android:text="@string/bamboo"
                app:layout_constraintTop_toBottomOf="@id/apple"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/coconut"
                style="@style/NotifCheckbox"
                android:text="@string/coconut"
                app:layout_constraintTop_toBottomOf="@id/bamboo"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/cactus"
                style="@style/NotifCheckbox"
                android:text="@string/cactus"
                app:layout_constraintTop_toBottomOf="@id/coconut"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/dragonfruit"
                style="@style/NotifCheckbox"
                android:text="@string/dragon_fruit"
                app:layout_constraintTop_toBottomOf="@id/cactus"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/mango"
                style="@style/NotifCheckbox"
                android:text="@string/mango"
                app:layout_constraintTop_toBottomOf="@id/dragonfruit"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/grape"
                style="@style/NotifCheckbox"
                android:text="@string/grape"
                app:layout_constraintTop_toBottomOf="@id/mango"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/mushroom"
                style="@style/NotifCheckbox"
                android:text="@string/mushroom"
                app:layout_constraintTop_toBottomOf="@id/grape"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/pepper"
                style="@style/NotifCheckbox"
                android:text="@string/pepper"
                app:layout_constraintTop_toBottomOf="@id/mushroom"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/cacao"
                style="@style/NotifCheckbox"
                android:text="@string/cacao"
                app:layout_constraintTop_toBottomOf="@id/pepper"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/beanstalk"
                style="@style/NotifCheckbox"
                android:text="Beanstalk"
                app:layout_constraintTop_toBottomOf="@id/cacao"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/sugarapple"
                style="@style/NotifCheckbox"
                android:text="Sugar Apple"
                app:layout_constraintTop_toBottomOf="@id/beanstalk"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/emberlily"
                style="@style/NotifCheckbox"
                android:text="Ember Lily"
                app:layout_constraintTop_toBottomOf="@id/sugarapple"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <android.widget.Button
        style="@style/SettingsButton"
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        android:text="@string/save"
        android:textSize="25sp" />

</androidx.constraintlayout.widget.ConstraintLayout>